--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,18 @@
 //general
+html {
+  font-size: 10px;
+}
 body {
   font-family: "Roboto", sans-serif;
+}
+.container {
+  max-width: 1170px;
+  padding: 15px;
+}
+.section__title {
+  @include fontProps(3.6rem, 300, $gray);
+}
+//header
+.header {
+  background: url(../img/header/header-bg.webp) no-repeat center center;
 }
