--- a/scss/style.scss
+++ b/scss/style.scss
@@ -437,3 +437,56 @@ input {
     @include fontProps(1.8rem, 500);
   }
 }
+//portfolio
+.portfolio__title {
+  margin-bottom: 55px;
+}
+.portfolio__buttons {
+  border: 1px solid $mainColor;
+  border-radius: 23px;
+  margin: 0 auto 23px;
+  width: 100%;
+  max-width: 820px;
+}
+.portfolio__btn {
+  @include noBorder;
+  @include fontProps(1.4rem, 300, $mainColor);
+  @include paddingsLR(36px);
+  text-align: center;
+  line-height: 47px;
+  background-color: transparent;
+  cursor: pointer;
+  text-transform: uppercase;
+  word-wrap: nowrap;
+  position: relative;
+  &:hover {
+    @include portfolioBtn;
+  }
+  &:not(:first-child)::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 1px;
+    height: 45px;
+    background-color: $mainColor;
+    left: 0;
+    bottom: 2px;
+  }
+}
+.portfolio__btn.active {
+  @include portfolioBtn;
+  &::before {
+    display: none;
+  }
+}
+.portfolio__btn:hover::before {
+  display: none;
+}
+.portfolio__item {
+  margin-bottom: 30px;
+}
+.portfolio__img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
